--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html ng-app>
 <head>
+	<script type="text/javascript" src="/assets/Tangle.js"></script>
+
+    <!-- TangleKit (optional) -->
+    <link rel="stylesheet" href="/assets/TangleKit/TangleKit.css" type="text/css">
+    <script type="text/javascript" src="/assets/TangleKit/mootools.js"></script>
+    <script type="text/javascript" src="/assets/TangleKit/sprintf.js"></script>
+    <script type="text/javascript" src="/assets/TangleKit/BVTouchable.js"></script>
+    <script type="text/javascript" src="/assets/TangleKit/TangleKit.js"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>        
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> 
+
 	<title>Blog</title>
 	<%= stylesheet_link_tag    "application", media: "all" %>
 	<%= javascript_include_tag "application", controller_name %>
