Добавил новые сущности, доработал внешний вид основной страницы производства.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>        
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> 
 
-	<title>Blog</title>
+	<title>BizFlow</title>
 	<%= stylesheet_link_tag    "application", media: "all" %>
 	<%= javascript_include_tag "application", controller_name %>
 	<%= csrf_meta_tags %>
