--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -133,26 +133,26 @@
           <div class="row-fluid">
             <div class="span{{ 12 / orders[currentOrder].inputs.length }}" ng-repeat="input in orders[currentOrder].inputs">
               <div class="mixer-input">
-                <h3>{{ input.productName }}</h3>
-                <span class="ItemDrag" collectionName="inputs" itemNum = {{$index}} data-min="0" data-max="{{ input.onHand }}" >{{ input.qty }}</span>
+                <h3>{{ input.productName }} ({{ input.pct }}%)</h3>
+                <span class="ItemDrag" collectionName="inputs" itemNum = {{$index}} data-min="0" data-max="{{ input.onHand }}" >{{ input.qty }}</span> 
               </div> 
               <div class="arrow-input"></div>        
             </div>
           </div>
 
           <div class="row-fluid mixer-body">
-            <h2>Рецепт: </h2>
+            <h2>Что производим: </h2>
             <select class="order-select" ng-model="currentOrder">
-              <option ng-repeat="order in orders">{{ order.name }}</option>
-            </select>
+              <option ng-repeat="order in orders">{{ order.name }}</option>              
+            </select>            
           </div>
 
           <div class="row-fluid">
             <div class="span{{ 12 / orders[currentOrder].outputs.length }}" ng-repeat="output in orders[currentOrder].outputs">
               <div class="arrow-output"></div>
               <div class="mixer-output">
-                <h3>{{ output.productName }}</h3> 
-                <span class="ItemDrag" collectionName="outputs" itemNum = {{$index}} data-min="0" data-max="{{ output.onHand }}">{{ output.qty }}</span>
+                <h3>{{ output.productName }} ({{ output.pct }}%)</h3>  
+                <span class="ItemDrag" collectionName="outputs" itemNum = {{$index}} data-min="0" data-max="{{ output.onHand }}">{{ output.qty }}</span>                
               </div>
             </div>
           </div>
@@ -160,13 +160,14 @@
 
         <div class="span3">
           <div class="row-fluid">
-            <h3>Сумма производства: {{ orders[currentOrder].inputsTotal }} </h3>
-          </div>
-          <div class="row-fluid">
-            <h3>Сумма выхода: {{ orders[currentOrder].outputsTotal }} </h3>
+            <h3>Общий объем производства: {{ orders[currentOrder].inputsTotal }} </h3>
+          </div>          
+          <div class="row-fluid">            
+            <button type="button" class="btn btn-default btn-lg">
+                Пуск!
+            </button>
           </div>
         </div>
-
-      </div>
+      </div>      
     </div>
   </body>
