--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -140,11 +140,14 @@
             </div>
           </div>
 
-          <div class="row-fluid mixer-body">
-            <h2>Что производим: </h2>
+          <div class="row-fluid mixer-body">          
+            <h2>Операция: </h2>
             <select class="order-select" ng-model="currentOrder">
               <option ng-repeat="order in orders">{{ order.name }}</option>              
-            </select>            
+            </select>                        
+          </h2>
+          
+
           </div>
 
           <div class="row-fluid">
@@ -156,17 +159,18 @@
               </div>
             </div>
           </div>
+          <div class="row-fluid">
+          <h2>        
+              <button type="button" class="btn btn-default btn-lg">
+                Пуск!
+            </button>
+          </div>
         </div>
 
         <div class="span3">
           <div class="row-fluid">
             <h3>Общий объем производства: {{ orders[currentOrder].inputsTotal }} </h3>
-          </div>          
-          <div class="row-fluid">            
-            <button type="button" class="btn btn-default btn-lg">
-                Пуск!
-            </button>
-          </div>
+          </div>                                 
         </div>
       </div>      
     </div>
