--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -124,8 +124,46 @@
   </script>
   <body onload="setUpTangle();">
     <div id = "production" class="container-fluid text-center" ng-controller="IndexCtrl">
-      <div class="row-fluid">
 
+      <div class="row-fluid history-all">
+        <div class="row-fluid" ng-repeat="oldOrder in history">
+          <div class="row-fluid">
+            <div class="span9">
+              <div class="row-fluid">
+                <div class="span{{ 12 / oldOrder.inputs.length }}" ng-repeat="input in recipes[oldOrder.recipeName].inputs">
+                  <div class="history-body">
+                    <h3>{{ input.productName }} ({{ input.pct }}%)</h3>
+                    <span >{{ oldOrder.inputs[$index] }}</span> 
+                  </div> 
+                  <div class="arrow-input"></div> 
+                </div>
+              </div>
+              <div class="row-fluid history-body">
+                <h2>Операция: {{history[$index].recipeName}} </h2>
+              </div>
+              <div class="row-fluid">
+                <div class="span{{ 12 / oldOrder.outputs.length }}" ng-repeat="output in recipes[oldOrder.recipeName].outputs">
+                  <div class="arrow-output"></div> 
+                  <div class="history-body">
+                    <h3>{{ output.productName }} ({{ output.pct }}%)</h3>
+                    <span >{{ oldOrder.outputs[$index] }}</span> 
+                  </div> 
+                </div>
+              </div>
+            </div>
+            <div class="span3">
+              <div class="row-fluid">
+                <h3>Общий объем производства: {{ oldOrder.inputsTotal }} </h3>
+              </div>  
+            </div>
+          </div>
+          <div class="row-fluid">
+            <hr/>
+          </div>
+        </div>
+      </div>
+
+      <div id="orderRow" class="row-fluid">
         <div class="span9">
           <div class="row-fluid">
             <div class="span{{ inputSpanType() }}" ng-repeat="input in recipes[order.recipeName].inputs">
@@ -142,7 +180,6 @@
             <select class="order-select" ng-model="order.recipeName" ng-change="setUpOrder()">
               <option ng-repeat="recipe in recipes">{{ recipe.name }}</option>              
             </select>                        
-          </h2>
           </div>
 
           <div class="row-fluid">
@@ -154,11 +191,13 @@
               </div>
             </div>
           </div>
+
+          <br/>
+
           <div class="row-fluid">
-          <h2>        
-              <button type="button" class="btn btn-default btn-lg">
-                Пуск!
-            </button>
+            <form ng-submit="execute()">
+              <input class="btn btn-default btn-lg" type="submit" value="Пуск!">
+            </form>
           </div>
         </div>
 
@@ -167,6 +206,7 @@
             <h3>Общий объем производства: {{ order.inputsTotal }} </h3>
           </div>                                 
         </div>
-      </div>      
+      </div> 
+
     </div>
   </body>
