--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html ng-app>
 <head>
-	<script type="text/javascript" src="/assets/Tangle.js"></script>
+	<script type="text/javascript" src="/assets/Clarity.js"></script>
 
-    <!-- TangleKit (optional) -->
-    <link rel="stylesheet" href="/assets/TangleKit/TangleKit.css" type="text/css">
-    <script type="text/javascript" src="/assets/TangleKit/mootools.js"></script>
-    <script type="text/javascript" src="/assets/TangleKit/sprintf.js"></script>
-    <script type="text/javascript" src="/assets/TangleKit/BVTouchable.js"></script>
-    <script type="text/javascript" src="/assets/TangleKit/TangleKit.js"></script>
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>        
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> 
+    <link rel="stylesheet" href="/assets/ClarityKit/ClarityKit.css" type="text/css">
+    <script type="text/javascript" src="/assets/ClarityKit/mootools.js"></script>
+    <script type="text/javascript" src="/assets/ClarityKit/BVTouchable.js"></script>
+    <script type="text/javascript" src="/assets/ClarityKit/ClarityKit.js"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>   
 
 	<title>BizFlow</title>
 	<%= stylesheet_link_tag    "application", media: "all" %>
