--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,11 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
 @import "bootstrap";
 @import "bootstrap-responsive";
 
 body {
+    padding-top: 60px;
     background-repeat:no-repeat;
 }
 
@@ -60,6 +60,7 @@ body {
 	-webkit-border-radius:6px; 
 	-moz-border-radius:5px;
 	border-radius:6px;
+	border: 1px solid #C2C2C2;
 	background-color: #F5F5F5; 
 	-khtml-border-radius:10px;
 }
