--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -27,8 +27,13 @@ body {
 	-webkit-border-radius:6px; 
 	-moz-border-radius:5px;
 	border-radius:6px;
-	background-color: #EFEFFF; 
+	background-color: #DADAFF; 
 	-khtml-border-radius:10px;
+	position: relative;
+}
+
+.input-content {
+	position: relative;
 }
 
 .mixer-output {
@@ -36,7 +41,7 @@ body {
 	-webkit-border-radius:6px; 
 	-moz-border-radius:5px;
 	border-radius:6px;
-	background-color: #FFE8DD; 
+	background-color: #FFE7CE; 
 	-khtml-border-radius:10px;
 }
 
@@ -111,4 +116,10 @@ body {
 .over-max-true {
 	color: #f00;
 	border-bottom: 1px dashed #f00;
+}
+
+.critical-level {
+	position: absolute; 
+	width: 100%; height: 30%; 
+	border-bottom: 1px dashed #9C9C9C;
 }
