--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -41,10 +41,6 @@
       </div>
       <!-- .... -->
 
-      <!--<span>Status: {{status}}</span><br/>-->
-      <!--<span>Data: {{data}}</span><br/>-->
-      <!--<span>Recipes: {{recipes}}</span>-->
-
       <!-- ИСТОРИЯ ПРОИЗВОДСТВА ............................................................ -->
       <div id="historyRow" class="row-fluid">
         <div class="row-fluid history-all" ng-repeat="oldOrder in history | filter:query">
@@ -83,6 +79,7 @@
             <div class="span3">
               <div class="row-fluid">
                 <h3>Общий объем производства: {{ oldOrder.inputsTotal }} </h3>
+                <h3>Дата: {{ oldOrder.date.toLocaleString() }}</h3>
               </div>  
             </div>
           </div>
@@ -98,9 +95,12 @@
           <!-- Входные данные -->
           <div class="row-fluid">
             <div class="span{{ inputSpanType() }}" ng-repeat="input in recipes[order.recipeName].inputs">
-              <div class="mixer-input">
-                <h3>{{ input.productName }} ({{ input.pct }}%)</h3>
-                <span class="ItemDrag over-max-{{ order.inputs[$index] > input.onHand }}" collectionName="inputs" itemNum = {{$index}} data-min="0" data-max="{{ input.onHand }}" >{{ order.inputs[$index] }}</span> 
+              <div class="mixer-input" ng-style="inputStyle($index)">
+                  <div class="critical-level" ng-style="criticalStyle($index)"></div>
+                  <div class="input-content">
+                    <h3>{{ input.productName }} ({{ input.pct }}%)</h3>
+                    <h3><span class="ItemDrag over-max-{{ order.inputs[$index] > input.onHand }}" collectionName="inputs" itemNum = {{$index}} data-min="0" data-max="{{ input.onHand }}" >{{ order.inputs[$index] }}</span></h3>
+                  </div>
               </div> 
               <div class="arrow-input"></div>        
             </div>
@@ -120,7 +120,7 @@
               <div class="arrow-output"></div>
               <div class="mixer-output">
                 <h3>{{ output.productName }} ({{ output.pct }}%)</h3>  
-                <span class="ItemDrag over-max-false" collectionName="outputs" itemNum = {{$index}} data-min="0" data-max="{{ output.onHand }}">{{ order.outputs[$index] }}</span>                
+                <h3><span class="ItemDrag over-max-false" collectionName="outputs" itemNum = {{$index}} data-min="0" data-max="{{ output.onHand }}">{{ order.outputs[$index] }}</span></h3>           
               </div>
             </div>
           </div>
