--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -23,7 +23,7 @@
   });
   </script>
 
-  <body ng-app="myApp" onload="">
+  <body ng-app="bizFlow">
     <div id = "production" class="container-fluid text-center" ng-controller="IndexCtrl">
 
       <!-- Меню -->
@@ -107,12 +107,13 @@
           </div>
           <!-- ............. -->
 
-          <div class="row-fluid mixer-body">          
+          <div class="row-fluid mixer-body">
             <h2>Операция: </h2>
             <select class="order-select" ng-model="order.recipeName" ng-change="setUpOrder()">
-              <option ng-repeat="recipe in recipes">{{ recipe.name }}</option>              
+              <option ng-repeat="recipe in recipes">{{ recipe.name }}</option>
             </select>                        
           </div>
+          <!--<div order-selector></div>-->
 
           <!-- Выходные данные -->
           <div class="row-fluid">
@@ -120,7 +121,7 @@
               <div class="arrow-output"></div>
               <div class="mixer-output">
                 <h3>{{ getProductName(output.productName, output.pct, recipes[order.recipeName].itemType) }}</h3>  
-                <h3><span class="ItemDrag over-max-false" collectionName="outputs" itemNum = {{$index}} data-min="0" data-max="{{ output.onHand }}">{{ order.outputs[$index] }}</span></h3>           
+                <h3><span class="ItemDrag over-max-false" collectionName="outputs" itemNum = {{$index}} data-min="0" data-max="{{ output.onHand }}">{{ order.outputs[$index] }}</span></h3>        
               </div>
             </div>
           </div>
@@ -130,7 +131,7 @@
 
           <div class="row-fluid">
             <form ng-submit="execute()">
-              <input id="submitBtn" class="btn btn-default btn-lg" type="submit" value="Пуск!">
+              <input id="submitBtn" class="btn btn-default btn-lg" type="submit" value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="executeButtonDisabled()">
             </form>
           </div>
         </div>
